CSS::Sass (3.3.6)

  * Fix issue with ExtUtils::MakeMaker 7.12+
  * Add gcc 4.4 compatibility for libsass

CSS::Sass (3.3.5)

  * Fix spec runner to pass on linux (unicode issue)
  * Fix broken unicode test comparing on some systems
  * Add missing test dependency in meta files (YAML::XS)
  * Update README for Module::Build to ExtUtils::MM switch

CSS::Sass (3.3.4)

  * Update to latest LibSass dev release (pre 3.3.7)
  * Fix build edge case with EUMM 7.16 (@genehack)
  * Remove duplicate "m" arg from psass (@dracos)

CSS::Sass (3.3.3)

  * Update to latest LibSass release (3.3.6)

CSS::Sass (3.3.2)

  * Update to latest LibSass release (3.3.5)

CSS::Sass (3.3.1)

  * Update to latest LibSass release (3.3.4)

CSS::Sass (3.3.0)

  * Update to latest LibSass release (3.3.3)
  * Update spec test runner for error specs
  * Use LibSass functions for compare operations
  * Switch `Module::Build` with `ExtUtils::MakeMaker`
  * Improve unicode handling with command line utility

CSS::Sass (3.3.0-rc1)

  * Update to latest libsass release (3.3.0-rc1)
  * Implement native operations for sass values
  * Add missing `source-map-root` context option
  * Move build to more portable ExtUtils::MakeMaker

CSS::Sass (3.2.2)

  * Update to latest libsass release (3.2.4)
  * Rename CSS::Sass::Type to CSS::Sass::Value
  * Old namespace is still supported ("linked")
  * Add more overload operators for sass values

CSS::Sass (3.2.1)

  * Update some outdated documentation
  * Add missing version file for libsass
  * Silence some compiler warnings

CSS::Sass (3.2.0)

  * Update to latest libsass release (3.2.0)
  * Add options for remaining output styles
  * Add indent and linefeed config options
  * Add benchmark option to command line tool
  * Add watcher option to recompile on changes
  * Refactor for libsass context option initializing
  * Expose `resolve_file` function on the C-API
  * Add experimental API for multiple importers
  * Add highly experimental API for custom headers
