@@ -1,7 +1,7 @@
 The MIT License (MIT)
 
-Copyright (c) 2013 David Caldwell
-Copyright (c) 2014 Marcel Greter
+Copyright (c) 2013-2014 David Caldwell
+Copyright (c) 2014-2017 Marcel Greter
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
