@@ -68,5 +68,5 @@
          "url" : "https://github.com/sass/perl-libsass"
       }
    },
-   "version" : "v3.3.6"
+   "version" : "v3.4.0"
 }
