@@ -1,0 +1,20 @@
+@mixin inc()
+  mix: in
+
+.a
+  +
+    .c, .b
+      margin: 10px
+      +inc
+
+.a
+  +inc
+  + b
+    .c, .b
+      margin: 10px
+
+
+.a
+  >
+    .c, .b
+      margin: 10px
