@@ -1,3 +1,14 @@
+CSS::Sass (3.4.0)
+
+  * Update to latest LibSass release (3.4.0)
+  * Add source-map-file-urls option to cli
+  * Change cli options to be case sensitive
+  * Fix issue connected to EUMM bugfix
+  * Update spec runner for nested options
+  * Enable error spec tests again
+
+ -- Marcel Greter <perl-libsass@ocbnet.ch>  Sat, 10 Dec 2016 17:23:09 +0200
+
 CSS::Sass (3.3.6)
 
   * Fix issue with ExtUtils::MakeMaker 7.12+
